# sql-alchemy-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
spec/: 00-overview.md  01-project-setup.md  02-engine-management.md  03-read-tools.md  04-write-tools.md  05-resources-and-prompts.md  06-testing.md  07-packaging-and-distribution.md  08-cli-mode.md
src/sqlalchemy_mcp_server/: __init__.py  __main__.py  cli.py  engine.py  prompts.py  resources.py  server.py
src/sqlalchemy_mcp_server/tools/: read.py  write.py
tests/: conftest.py  test_cli.py  test_engine.py  test_mode_enforcement.py  test_prompts.py  test_read_tools.py  test_resources.py  test_write_tools.py
